<resources>
    <string name="app_name">PostBar</string>
    <string name="register_login">注册登录</string>
    <string name="text_not_network">请检查网络连接是否正常</string>
    <string name="text_exit_app">再按一次返回键退出</string>

    <!--网络请求异常情况-->
    <string name="error_network">网络异常</string>
    <string name="error_server">服务器出了点小问题，正在修复，请稍后重试</string>
    <string name="error_system">系统异常</string>
    <string name="error_data_format">数据解析异常</string>
    <string name="error_unknown">未知错误</string>

    <string name="put_phone">输入手机号</string>
    <string name="phone_empty">手机号码不能为空</string>
    <string name="phone_error">手机号格式错误</string>
    <string name="register_success">注册成功</string>

    <string name="add_bar">新建吧</string>
    <string name="join_bar">加入吧</string>

    <string name="main">首页</string>
    <string name="mine">我的</string>

    <string name="confirm">确定</string>
    <string name="put_bar_name">请输入吧名</string>
    <string name="put_nick_name">请输入昵称</string>
    <string name="tips_put_bar_name">吧名不能为空</string>
    <string name="tips_put_nick_name">昵称不能为空</string>

    <string name="put_invite">请输入邀请码</string>
    <string name="put_invite_tips">邀请码不能为空</string>
    <string name="tips_bar_add_success">新建吧成功</string>
    <string name="tips_bar_join_success">加入吧成功</string>

    <string name="invite_new_user">邀请吧成员</string>
    <string name="invite_price_tips">填写进吧价格</string>
    <string name="invite_yuan">元</string>
    <string name="invite_price_charges">（平台将抽佣5%）</string>
    <string name="invite_touch_tips">长按识别二维码</string>
    <string name="invite_create_poster">生成邀请海报</string>
    <string name="invite_save_poster">保存邀请海报</string>
    <string name="invite_save_poster_tips">保存后发送给微信好友即可</string>
    <string name="invite_save_tips">请填写进吧价格</string>
    <string name="invite_price_tip">价格不能为0</string>
    <string name="invite_poster_title">%1$s\n邀请函</string>

    <string name="all_reply">全部回复</string>
    <string name="reply_success">评论成功</string>
    <string name="reply_empty_tips">评论内容不能为空</string>

</resources>
