<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InvitePosterActivity">

    <include
        android:id="@+id/layout_title"
        layout="@layout/layout_title"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_title">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/layout_poster"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="30dp"
                android:background="@color/lightgray"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:visibility="visible"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/poster_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:maxLines="2"
                    android:textColor="@color/charcoalgrey"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/qrCode"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_below="@+id/poster_title"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/qrCode"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/invite_touch_tips"
                    android:textColor="@color/charcoalgrey"
                    android:textSize="12sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/savePosterBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/shape_btn"
                android:paddingBottom="8dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="8dp"
                android:text="@string/invite_save_poster"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_poster"
                android:onClick="savePoster"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/save_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textSize="12sp"
                android:textColor="@color/charcoalgrey"
                android:text="@string/invite_save_poster_tips"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/savePosterBtn"
                android:visibility="visible"/>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>